@@ -5,6 +5,8 @@
 - Bugfix: Minimise CSS interference from the hosting cms with
   marked text.
 - Bugfix: Disabling via sourcecode works again.
+- Bugfix: Removed the special backtrace configuration, which
+  resulted in a output overkill, crashing the backtrace.
 
 2.3.1
 - Bugfix: Fixed shell detection.
